bk_ida/gccida/g3/gen_split_1231
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_1231/src/insn-emit.c:17230:52: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
*( ( __m128i *)operands + 3) = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)v1, ( __m128i)( unsigned __int64)v2); 
                                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_1231/src/insn-emit.c:17230:85: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
*( ( __m128i *)operands + 3) = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)v1, ( __m128i)( unsigned __int64)v2); 
                                                                                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_1231/src/insn-emit.c:17235:18: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v10 = gen_rtx( ( rtx_code)*( _WORD *)operand1, ( machine_mode)*( ( unsigned __int8 *)operand1 + 2), v9, v8); 
                 ^~~~~~~~
                 rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_1231/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_1231/src/insn-emit.c:17235:27: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
v10 = gen_rtx( ( rtx_code)*( _WORD *)operand1, ( machine_mode)*( ( unsigned __int8 *)operand1 + 2), v9, v8); 
               ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_1231/src/insn-emit.c:17235:50: error: use of undeclared identifier 'machine_mode'
v10 = gen_rtx( ( rtx_code)*( _WORD *)operand1, ( machine_mode)*( ( unsigned __int8 *)operand1 + 2), v9, v8); 
                                                 ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_1231/src/obj/insn-emit.o] Error 1
